<resources>
    <string name="app_name">LeafLink</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Users name</string>
    <string name="nav_header_subtitle">user@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Add Event</string>
    <string name="menu_slideshow">Pollen and Air</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_picture">Take picture</string>
    <string name="cancel">Cancel</string>
    <string name="notification_upload_success_title">The photo was successfully processed.</string>
    <string name="notification_upload_fail_title">The photo was not successfully processed!</string>
    <string name="notification_upload_error_title">The photo was not uploaded successfully!</string>
    <string name="notification_channel_name">Image processing notification</string>
    <string name="notification_channel_description">Notifications for trash recognition</string>
    <string name="notification_upload_success_message">Results for your picture: %1$s</string>
    <string name="text_deafult_theme">Choose your preferred theme:</string>
    <string name="text_theme_light">Light Theme</string>
    <string name="text_theme_dark">Dark Theme</string>
    <string name="notification_textview">Notifications:</string>
    <string name="off">Off</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="pm10">PM10</string>
    <string name="pm25">PM2.5</string>
    <string name="so2">So2</string>
    <string name="no2">No2</string>
    <string name="co2">CO2</string>
    <string name="ozone">Ozone</string>
    <string name="benzene">Benzene</string>
    <string name="frequency_textview">Scraping frequency:</string>
    <string name="submit">Submit</string>
    <string name="message_extreme">Enter message</string>
    <string name="choose_category">Message category</string>
    <string name="publish_message">Publish message</string>
    <string name="simulate">Simulate</string>
    <string name="select_value_range">Select Value Range</string>
    <string name="value_0">Value: 0</string>
    <string-array name="frequency_spinner">
        <item>Never</item>
        <item>Hourly</item>
        <item>Daily</item>
    </string-array>

    <string-array name="categories">
        <item>Air Quality</item>
        <item>Pollen</item>
    </string-array>
</resources>