<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="feri.um.leaflink.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_addEvent"
        android:name="feri.um.leaflink.ui.gallery.AddFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/nav_pollen"
        android:name="feri.um.leaflink.ui.pollenAndAir.PollenAirFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_pollen_and_air" />

    <fragment
        android:id="@+id/imageProcessingFragment"
        android:name="feri.um.leaflink.ui.imageProcessing.ImageProcessFragment"
        android:label="Image Processing"
        tools:layout="@layout/fragment_image_process" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="feri.um.leaflink.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/PublishMessageFragment"
        android:name="feri.um.leaflink.ui.message.PublishMessageFragment"
        android:label="@string/publish_message"
        tools:layout="@layout/fragment_publish_message" />
</navigation>